añadiento capitulo 4 y resupuesto

--- a/cap6.tex
+++ b/cap6.tex
@@ -1,17 +1,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Chapter 7: Presupuesto
+% Chapter 6: Summary and Conlusions
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-Este capítulo es obligatorio.
-Toda memoria de Trabajo de Fin de Grado debe incluir un presupuesto.
-
-%---------------------------------------------------------------------------------
-\section{Sección Uno}
-\label{7:sec:1}
-
-
-\input{tables/table.tex}
+This chapter is compulsory.
+The memory should include an extended summary and conclusions in english. 
 
 
