--- a/cap5.tex
+++ b/cap5.tex
@@ -4,7 +4,13 @@
 
 %++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-Este capítulo es obligatorio.
-Toda memoria de Trabajo de Fin de Grado debe incluir unas conclusiones y unas 
-líneas de trabajo futuro 
+CodeLab nace como una herramienta que pretende extender la funcionalidad de otras herramientas como Github Classroom, añadiendo funcionalidades específicas del profesorado para apoyar la gestión de los cursos y también la corrección de prácticas. 
 
+El uso de la plataforma se ha diseñado pensando en su facilidad de uso para aquellos que no estén tan familiarizados con los conceptos de GitHub. Por otro lado, se ha enfatizado en cumplir lo máximo posible los estándares del Software Libre, 
+facilitando el desarrollo colaborativo y la inclusión de nuevas funcionalidades por parte de otros programadores.
+
+Teniendo en cuenta las facilidades que proporciona CodeLab sería extremadamente útil para profesores que tengan grandes grupos de alumnos o que no estén muy familiarizados con el entorno de Github, ya que automatiza totalmente la creación de repositorios y el manejo de los permisos de acceso de cada alumno a sus repositorios y a los repositorios de los compañeros
+
+Además, el control de versiones ofrece muchas ventajas a los desarrolladores. En la actualidad, todas las empresas de desarrollo usan control de versiones git, por lo que, es fundamental que los alumnos aprendan a manejar git de forma correcta y aprendan técnicas de trabajo en equipo así como todas las herramientas que proporciona Github como los issues o los projects.
+
+En el futuro, me planteo seguir desarrollando CodeLab, mejorándola y añadiendole nuevas funcionalidades. Una de las primeras mejoras que se plantean es la utilización de una librería de front-end como Vue o React para mejorar la calidad visual de la plataforma web. Una nueva funcionalidad que me gustaría añadir es la posibilidad de más de un profesor por aula.
