--- a/cap6.tex
+++ b/cap6.tex
@@ -4,7 +4,13 @@
 
 %++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-This chapter is compulsory.
-The memory should include an extended summary and conclusions in english. 
+CodeLab was born as a tool that aims to extend the functionality of other tools such as Github Classroom, adding specific functions of the teachers to support the management of the courses and also the correction of practices.
 
+The platform has been designed with ease of use in mind for those who are not used to using GitHub. On the other hand, emphasis has been placed on fulfilling the Free Software standards as much as possible,
+facilitating collaborative development and the inclusion of new features by other programmers.
 
+Taking into account the facilities that CodeLab provides, it would be extremely useful for professors who have large groups of students or who are not very familiar with the Github envir
+
+In addition, version control offers many advantages to developers. Currently, all development companies use git version control, so it is essential that students learn to handle git correctly and learn teamwork techniques as well as all the tools that Github provides such as issues or the projects
+
+In the future, I would like to continue developing CodeLab, improving it and adding new functionalities. One of the first improvements that is proposed is the use of a front-end library such as Vue or React to improve the visual quality of the web platform. A new functionality that I would like to add is the possibility of more than one teacher per classroom.
