--- a/memtfg.tex
+++ b/memtfg.tex
@@ -173,21 +173,11 @@ Agradecimientos
 
 \begin{large}
 
+\hspace{3mm}
+A mi familia, por el apoyo que me han dado durante estos años.
 
 \hspace{3mm}
-XXX
-
-\hspace{3mm}
-XXX
-
-
-\hspace{3mm}
-XXX
-
-
-\hspace{3mm}
-XXX
-
+A Casiano, por enseñarme el mundo de las tecnologías web y transmitirme sus conocimientos sobre JavaScript e iniciarme en el mundo fullstack.
 
 \end{large}
 
