modificaciones de Casiano

--- a/cap6.tex
+++ b/cap6.tex
@@ -4,13 +4,30 @@
 
 %++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-CodeLab was born as a tool that aims to extend the functionality of other tools such as Github Classroom, adding specific functions of the teachers to support the management of the courses and also the correction of practices.
+CodeLab was born as a tool that aims to extend the functionality
+of other tools such as Github Classroom, adding specific functions
+for the teachers to support the management of courses and 
+the correction of programming labs.
 
-The platform has been designed with ease of use in mind for those who are not used to using GitHub. On the other hand, emphasis has been placed on fulfilling the Free Software standards as much as possible,
+The platform has been designed with ease of use in mind for those
+who are not familiar with GitHub. On the other hand, emphasis has
+been placed on fulfilling the Free Software standards as much as
+possible,
 facilitating collaborative development and the inclusion of new features by other programmers.
 
-Taking into account the facilities that CodeLab provides, it would be extremely useful for professors who have large groups of students or who are not very familiar with the Github envir
+We believe that the facilities provided by  CodeLab are
+useful for lecturers who have large groups of students
+or who are not familiar with the Github environment.
 
-In addition, version control offers many advantages to developers. Currently, all development companies use git version control, so it is essential that students learn to handle git correctly and learn teamwork techniques as well as all the tools that Github provides such as issues or the projects
+Version control offers many advantages to developers.
+Currently, most development companies use the git version control system, 
+and consequently it is essential that students learn to handle git correctly and
+learn teamwork techniques as well as all the tools that Github
+provides such as issues or projects.
 
-In the future, I would like to continue developing CodeLab, improving it and adding new functionalities. One of the first improvements that is proposed is the use of a front-end library such as Vue or React to improve the visual quality of the web platform. A new functionality that I would like to add is the possibility of more than one teacher per classroom.
+In the future, I would like to continue developing CodeLab, improving
+it and adding new functionalities. One of the first improvements
+that is proposed is the use of a front-end library such as Vue or
+React to improve the visual quality of the web platform. A new
+functionality that I would like to add is the possibility of more
+than one teacher per classroom.
