--- a/memtfg.bib
+++ b/memtfg.bib
@@ -52,3 +52,14 @@
    title     = {{Heroku}},
    note      = {https://devcenter.heroku.com/}
 }
+
+@MISC{B12,
+   title     = {{GitHub Education}},
+   note      = {https://education.github.com/}
+}
+
+@MISC{B13,
+   title     = {{GitHub Classroom}},
+   note      = {https://classroom.github.com/}
+}
+
