--- a/cap1.tex
+++ b/cap1.tex
@@ -16,7 +16,7 @@ Las principales funciones del LMS son: gestionar usuarios, recursos, materiales 
 
 Como ejemplos reales de las definiciones mencionadas, se encuentra el servicio LCMS de Google, Google Classroom que está basado en Moodle, con la diferencia de que usa la Suite de Google Drive para el apoyo de almacenamiento y gestión de tareas.
 
-En el caso del apoyo al profesorado de informática encontramos los VPL sigla de Virtual Programing Lab, que es un módulo para la plataforma Moodle. Los VPL permiten editar y ejecutar el código fuente de las tareas de programación en el navegador, además permite que el profesor pueda corregir sin necesidad de descargar el código fuente para ejecutarlo, también se permite añadir restricciones como pegar código externo y permite comparar la similitud entre códigos de los alumnos, entre otras cosas.
+En el caso del apoyo al profesorado de informática encontramos los VPL sigla de Virtual Programing Lab, \cite{B14} que es un módulo para la plataforma Moodle. Los VPL permiten editar y ejecutar el código fuente de las tareas de programación en el navegador, además permite que el profesor pueda corregir sin necesidad de descargar el código fuente para ejecutarlo, también se permite añadir restricciones como pegar código externo y permite comparar la similitud entre códigos de los alumnos, entre otras cosas.
 
 Por último, la única herramienta para la gestión de tareas está desarrollada por Github, se trata de Github Classroom, una plataforma aprovecha las organizaciones y repositorios de Github como estructura para las aulas y tareas, haciendo uso de la herramienta de control de versiones Git. En el siguiente punto hablaremos en profundiad de Github Education y Classroom.
 
@@ -25,7 +25,7 @@ Por último, la única herramienta para la gestión de tareas está desarrollada
 \section{Github Education}
 \label{1:sec:2}
 
-Github Education es una plataforma desarrollada por Github que contiene varias herramientas para apoyar a los profesores en la asignación de tareas de programación:
+Github Education \cite{B12} es una plataforma desarrollada por Github que contiene varias herramientas para apoyar a los profesores en la asignación de tareas de programación:
 
 \begin{itemize}
   \item Classroom
