--- a/memtfg.bib
+++ b/memtfg.bib
@@ -63,3 +63,8 @@
    note      = {https://classroom.github.com/}
 }
 
+@MISC{B14,
+   title     = {{Virtual Programming Lab}},
+   note      = {http://vpl.dis.ulpgc.es/}
+}
+
