cap1-memtfg.bib

--- a/cap1.tex
+++ b/cap1.tex
@@ -25,20 +25,49 @@ Por último, la única herramienta para la gestión de tareas está desarrollada
 \section{Github Education}
 \label{1:sec:2}
 
-Github Education \cite{B12} es una plataforma desarrollada por Github que contiene varias herramientas para apoyar a los profesores en la asignación de tareas de programación:
+Github Education \cite{B12} es una comunidad desarrollada por Github  para el mundo de la enseñanza y que contiene varias herramientas  y servicios para apoyar a los profesores en su labor:
 
 \begin{itemize}
-  \item Classroom
+  \item GitHub Classroom \cite{B13}
   \item Classroom Desktop
-  \item Teachers Pet  
-  \item Education Comunity
+  \item Teachers Pet
+  \item Education Comunity \cite{B12}
   \item Student Pack
 \end{itemize}
 
-Classroom es una herramienta destinada a profesores para gestionar el uso educativo de GitHub. Simplifica la asignación de tareas, automatizando la creación de repositorios git usando las organizaciones de Github como aulas y los repositorios como asignaciones, es una herramienta útil y sencilla de usar, tanto para profesores como para alumnos, pero tiene ciertos defectos, por ejemplo, no se puede crear un repositorio de evaluación que contenga las tareas de todos los alumnos, para eso se debe usar Classroom Desktop, es decir, se requiere de otra herramienta para una única funcionalidad, tampoco se puede acceder a los enlaces de travis, si la práctica requiere su uso, por último, tiene un sistema para asociar información a cada alumno que es bastante complejo de usar, ya que requiere introducir a mano cada usuario y la información que se desea asociar.
+\subsection{Classroom}
 
+Classroom es una herramienta destinada a profesores para gestionar
+el uso educativo de GitHub. Simplifica la asignación de tareas,
+automatizando la creación de repositorios git usando las organizaciones
+de Github como aulas y los repositorios como asignaciones. 
+
+Es una
+herramienta útil y sencilla de usar, tanto para profesores como
+para alumnos, pero tiene ciertos defectos. 
+
+\begin{itemize}
+\item Por ejemplo, no se puede
+crear un repositorio de evaluación que contenga las tareas de todos
+los alumnos, para eso se debe usar Classroom Desktop, es decir, se
+requiere de otra herramienta para una única funcionalidad. 
+
+\item Tampoco
+se puede acceder a los enlaces de travis, si la práctica requiere
+su uso. 
+
+\item Por último, tiene un sistema para asociar información a
+cada alumno que es bastante complejo de usar, ya que requiere
+introducir a mano cada usuario y la información que se desea asociar.
+\end{itemize}
+
+\subsection{Teachers Pet}
 Teachers Pet es un CLI destinado a la administración de Education vía terminal, pero dejaron de desarrollarla porque para realizar ciertas tareas requería demasiadas opciones y los comandos eran demasiado largos.
 
+\subsection{Education community}
 Education Comunity es un foro para el intercambio de información entre alumnos, profesores, investigadores y desarrolladores.
 
-Student Pack es un paquete que ofrece Github a los alumnos para mejorar su experiencia haciendo uso de Github para el desarrrollo de tareas.
+\subsection{Student Pack}
+Student Pack \cite{B15} es un paquete que ofrece Github a los alumnos para
+mejorar su experiencia haciendo uso de Github para el desarrrollo
+de tareas.
