--- a/memtfg.bib
+++ b/memtfg.bib
@@ -68,3 +68,15 @@
    note      = {http://vpl.dis.ulpgc.es/}
 }
 
+
+@MISC{B15,
+   title     = {{GitHub Student Pack}},
+   note      = {https://education.github.com/pack}
+}
+
+
+@MISC{B16,
+   title     = {{Material Design}},
+   note      = {https://material.io/design/}
+}
+
