--- a/cap2.tex
+++ b/cap2.tex
@@ -8,8 +8,8 @@
 Los objetivos a desarrollar en este trabajo se definen a continuación:
 
 \begin{itemize}
-  \item {\bf A1.} Analizar otras plataformas  web existentes para la gestión del código de las práticas de informaática y su metodologiía de trabajo.
-  \item {\bf A2.} Estudiar el funcionamiento de otras plataformas  web existentes para la gestión del coódigo de las prácticas de informática.
+  \item {\bf A1.} Analizar otras plataformas  web existentes para la gestión del código de las prácticas de informática y su metodología de trabajo.
+  \item {\bf A2.} Estudiar el funcionamiento de otras plataformas  web existentes para la gestión del código de las prácticas de informática.
   \item {\bf A3.} Estudiar las tecnologías a usar y enfocar el diseño de la plataforma web.
   \item {\bf A4.} Estudiar las funcionalidades que se van a incluir en la plataforma web.
   \item {\bf A5.} Crear una aplicación web básica que permita al usuario iniciar sesión con su cuenta de Github.
