--- a/cap4.tex
+++ b/cap4.tex
@@ -6,7 +6,7 @@
 \label{4:sec1}
 
 Con vistas a probar y testear que todo funcionaba de forma correcta, Casiano me sugirió probar la plataforma para la realización de algunas prácticas individuales y grupales.
-Por ello, decidimos realizar algunas tareas para la asginatura de Procesadores de Lenguajes en CodeLab.
+Por ello, decidimos realizar algunas tareas para la asignatura de Procesadores de Lenguajes en CodeLab.
 
 \section{Detección de errores}
 \label{4:sec2}
@@ -18,7 +18,7 @@ Al poner en uso la plataforma, los alumnos de Procesadores de Lenguajes nos ayud
     \item No se añadía el usuario como colaborador al repositorio.
 \end{itemize}
 
-Los alumnos utilizaron la funcionalidad de los issues para notificar el error añadiendolos en el repositorio.
+Los alumnos utilizaron la funcionalidad de los issues para notificar el error añadiéndolos en el repositorio.
 
 Todas los errores fueron solucionados lo más rápido posible para que los alumnos de Procesadores de Lenguajes pudiesen usar la plataforma de forma correcta y realizar sus tareas en su repositorio correspondiente.
 Por tanto, CodeLab se comenzó a usar en producción en un aula de 31 alumnos, demostrando que es una herramienta totalmente funcional y capaz de gestionar las tareas de código de una asignatura.
