--- a/cap5.tex
+++ b/cap5.tex
@@ -32,8 +32,8 @@ alumnos aprendan a manejar git de forma correcta y aprendan técnicas
 de trabajo en equipo así como todas las herramientas que proporciona
 Github como los issues o los projects.
 
-En el futuro, me planteo seguir desarrollando CodeLab, mejorándo la herramienta
-y añadiendole nuevas funcionalidades. 
+En el futuro, me planteo seguir desarrollando CodeLab, mejorando la herramienta
+y añadiéndole nuevas funcionalidades. 
 Una de las primeras mejoras
 que se plantean es la utilización de una librería de front-end como
 Vue o React para mejorar la calidad visual de la plataforma web.
