--- a/cap7.tex
+++ b/cap7.tex
@@ -12,7 +12,7 @@ En este apartado se describirá el presupuesto del proyecto.
 
 Para el despliegue de la aplicación se han utilizado dos servidores, un servidor en Heroku que se ha usado de forma gratuita, pero que si se pagase hubiesen sido aproximadamente 30 euros en estos 4 meses que ha durado el desarrollo.
 
-Por otro lado, el STIC ULL nos cedió una servidor virtualizado en OVirt con sistema operativo Ubuntu y una dirección IP pública para el despliegue de la aplicación web, si hubiesemos acudido a una empresa como Digital Ocean, que nos proporcionase un servidor de las mismas características nos hubiese salido 70 euros en total.
+Por otro lado, el STIC ULL nos cedió una servidor virtualizado en OVirt con sistema operativo Ubuntu y una dirección IP pública para el despliegue de la aplicación web, si hubiésemos acudido a una empresa como Digital Ocean, que nos proporcionase un servidor de las mismas características nos hubiese salido 70 euros en total.
 
 \section{Coste humano}
 \label{7:sec:2}
