--- a/memtfg.tex
+++ b/memtfg.tex
@@ -132,7 +132,7 @@
 %\cleardoublepage
 \thispagestyle{empty}
 
-D. {\bf Casiano Rodríguez León}, con N.I.F. 42.020.072-S profesor Catedratico de Universidad adscrito al Departamento de Lenguajes y Sistemas Informáticos de la Universidad de La Laguna, como tutor
+D. {\bf Casiano Rodríguez León}, con N.I.F. 42.020.072-S profesor Catedrático de Universidad adscrito al Departamento de Lenguajes y Sistemas Informáticos de la Universidad de La Laguna, como tutor
 
 \bigskip
 \bigskip
