--- a/cap1.tex
+++ b/cap1.tex
@@ -6,11 +6,11 @@
 \section{Herramientas para el apoyo del profesorado de informática}
 \label{1:sec:1}
 
-En los últimos años se han desarrolladon las nuevas tecnologías, lo que ha permitido que lleguen nuevas herramientas de aprendizaje y de apoyo a la docencia. Es el caso de la exitosa plataforma Moodle, un LCMS, sigla de Learning Content Management System. 
+En los últimos años se han desarrollado las nuevas tecnologías, lo que ha permitido que lleguen nuevas herramientas de aprendizaje y de apoyo a la docencia. Es el caso de la exitosa plataforma Moodle, un LCMS, sigla de Learning Content Management System. 
 
 El Moodle, como otros LCMS, se utiliza para crear y manejar el contenido de un programa educativo, como por ejemplo un curso. Normalmente se crean partes de contenido en forma de módulos que se pueden personalizar.
 
-Existen otras herramientas como el LMS sigla de Learning Management System. El LMS es un software instalado en un servidor que se emplea para administrar, distribuir y controlar las actividades de formación de una institución. Un LCMS suele estár integrado en un LMS.
+Existen otras herramientas como el LMS sigla de Learning Management System. El LMS es un software instalado en un servidor que se emplea para administrar, distribuir y controlar las actividades de formación de una institución. Un LCMS suele estar integrado en un LMS.
 
 Las principales funciones del LMS son: gestionar usuarios, recursos, materiales y actividades de formación, administrar el acceso, controlar y hacer seguimiento del proceso de aprendizaje, realizar evaluaciones, generar informes, gestionar servicios de comunicación como foros de discusión, videoconferencias y correo electrónico entre otros.
 
@@ -18,7 +18,7 @@ Como ejemplos reales de las definiciones mencionadas, se encuentra el servicio L
 
 En el caso del apoyo al profesorado de informática encontramos los VPL sigla de Virtual Programing Lab, que es un módulo para la plataforma Moodle. Los VPL permiten editar y ejecutar el código fuente de las tareas de programación en el navegador, además permite que el profesor pueda corregir sin necesidad de descargar el código fuente para ejecutarlo, también se permite añadir restricciones como pegar código externo y permite comparar la similitud entre códigos de los alumnos, entre otras cosas.
 
-Por último, la única herramienta para la gestión de tareas está desarrollada por Github, se trata de Github Classroom, una plataforma aprovecha las organizaciones y repositorios de Github como estructura para las aulas y tareas, haciendo uso de la herramienta de control de versiones Git. En el siguiente punto hablaremos en profundiad de Github Education y Classroom.
+Por último, la única herramienta para la gestión de tareas está desarrollada por Github, se trata de Github Classroom, una plataforma aprovecha las organizaciones y repositorios de Github como estructura para las aulas y tareas, haciendo uso de la herramienta de control de versiones Git. En el siguiente punto hablaremos en profundidad de Github Education y Classroom.
 
 
 %---------------------------------------------------------------------------------
@@ -41,4 +41,4 @@ Teachers Pet es un CLI destinado a la administración de Education vía terminal
 
 Education Comunity es un foro para el intercambio de información entre alumnos, profesores, investigadores y desarrolladores.
 
-Student Pack es un paquete que ofrece Github a los alumnos para mejorar su experiencia haciendo uso de Github para el desarrrollo de tareas.
+Student Pack es un paquete que ofrece Github a los alumnos para mejorar su experiencia haciendo uso de Github para el desarrollo de tareas.
