añadiendo citas y referencias

--- a/memtfg.bib
+++ b/memtfg.bib
@@ -80,3 +80,17 @@
    note      = {https://material.io/design/}
 }
 
+@MISC{B17,
+   title     = {{OAuth}},
+   note      = {https://oauth.net/}
+}
+
+@MISC{B18,
+   title     = {{NPM}},
+   note      = {https://www.npmjs.com/}
+}
+
+@MISC{B19,
+   title     = {{Materialize CSS}},
+   note      = {https://materializecss.com/}
+}
